información sobre una colisión. Para evitar instanciar esta clase múltiples
veces por renderizado, se prepara un fondo.

Algunos fondos como CollisionInfo utilizan recursos como Arrays que se deben
liberar en reset() y, por tanto, reinicializar tras la llamada a obtain().
Para hacer este proceso cómodo y simple, se implementa una función init() en
cada objeto que implementa Poolable, que hace las preparaciones pertinentes y
devuelve la propia instancia. De este modo, los objetos se obtendrán siempre
no mediante .obtain() sino mediante .obtain().init(...).

Los VirusActor son otro candidato idóneo a ser gestionados mediante un fondo, ya
que deberán aparecer y desaparecer constantemente durante las partidas. Para
asegurarnos de que las instancias de VirusActor se devuelven al fondo cuando
se eliminan los virus, se sobreescribe remove() para primero liberar el
objeto.

Finalmente, se añade código en GameScreen para iniciar la partida cargada con
tres virus en posiciones predefinidas, y se establece un número de mascarillas
para el PlayerActor. Este fragmento de código solo existirá temporalmente para
hacer pruebas.

Actualmente hay algunos bugs con la gestión de los virus que serán corregidos
en los próximos commits. Concretamente:
- Parece ser posible que un virus infecte dos veces al PlayerActor. Posiblemente
  sea porque tanto el PlayerActor como el propio Virus gestionan estas colisiones.
- Cuando dos virus chocan entre sí, solo uno de los dos debe desaparecer. Sin
  embargo, actualmente se eliminan los dos.


Cambios presentados el 2021/01/25 (2)
-------------------------------------
Se corrige el bug que provocaba que la colisión con un virus contabilizase
múltiples veces. Se debía a que CollisionPool.reset no restauraba el valor
de player a null, lo que hacía que, tras entrar un virus en colisión con el
PlayerActor, este evento también fuera reportado falsamente en las futuras
llamadas a init().